# aiduediligencecopilot

./: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py
backend/app/chunking/: fixed.py  semantic.py
backend/app/config/: settings.py
backend/app/database/: qdrant_client.py  vector_database.py  vector_store.py
backend/app/models/: chunk.py  document.py  embedding.py
backend/app/rag/: chunker.py  loader.py
backend/app/rag/chunking/: base.py  fixed.py  semantic.py
backend/app/rag/embeddings/: base.py  bge.py
backend/app/rag/ingestion/: loader.py
backend/app/services/: document_service.py  embedding_service.py  storage_service.py
backend/app/utils/: text_utils.py
backend/scripts/: test_chunker.py  test_embeddings.py  test_loader.py  test_qdrant.py  test_upload.py
backend/tests/: test_loader.py
data/chunks/: tesla_annual_report_2025_chunks.json
data/processed/: tesla_2024_10k.json
