[project]
name = "project-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "pdfplumber>=0.11.10",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
